--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: '3.8'
 
 services:
   node1:
@@ -8,6 +9,9 @@ services:
       - .env.node1
     ports:
       - "8081:8080"
+    networks:
+      node_network:
+        ipv4_address: 192.168.5.16
 
   node2:
     build:
@@ -17,6 +21,9 @@ services:
       - .env.node2
     ports:
       - "8082:8080"
+    networks:
+      node_network:
+        ipv4_address: 192.168.5.91
 
   nginx:
     image: nginx:latest
@@ -27,3 +34,12 @@ services:
     depends_on:
       - node1
       - node2
+    networks:
+      - node_network
+
+networks:
+  node_network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: "192.168.5.0/24"
